Fixed bug with overlap about section on menu.

--- a/src/styles/About.module.scss
+++ b/src/styles/About.module.scss
@@ -53,7 +53,6 @@
       @media (min-width: 390px) and (max-width: 428px) {
         width: 330px;
         height: 564px;
-        z-index: 2;
       }
       height: 568px;
       .topic {
