--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -3,7 +3,7 @@
 
 .header {
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   top: 0px;
   left: 0px;
   width: 100%;
